--- a/src/main/resources/assets/eridium/lang/en_us.json
+++ b/src/main/resources/assets/eridium/lang/en_us.json
@@ -1,4 +1,3 @@
 {
-  "block.eridium.eridium_ore": "Eridium Ore",
-  "itemGroup.tabsqdsqdsqd": "Sqdsqdsqd"
+  "block.eridium.eridium_ore": "Eridium Ore"
 }
