--- a/src/main/resources/assets/eridium/lang/en_us.json
+++ b/src/main/resources/assets/eridium/lang/en_us.json
@@ -1,4 +1,9 @@
 {
+  "item.eridium.eridiumtool_shovel": "Eridiumtool Shovel",
+  "item.eridium.eridiumtool_axe": "Eridiumtool Axe",
+  "item.eridium.eridiumtool_hoe": "Eridiumtool Hoe",
   "block.eridium.eridium_ore": "Eridium Ore",
-  "item.eridium.eridium": "Eridium"
+  "item.eridium.eridium": "Eridium",
+  "item.eridium.eridiumtool_pickaxe": "Eridiumtool Pickaxe",
+  "item.eridium.eridiumtool_sword": "Eridiumtool Sword"
 }
